# openFrameworksCMake

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/openFrameworks/: CMakeLists.txt
libs/openFrameworksCompiled/project/cmakefileCommon/: compile.project.cmake  config.shared.cmake
libs/utf8/: CMakeLists.txt
